# proyecto22_cpp

./: CMakeLists.txt  README.md  comandos
simulator/: CMakeLists.txt
simulator/resources/core2-64/: setup_x4.xml  simulator_x4.sh  simulator_x4.xml  simulator_x8.sh  simulator_x8.xml
simulator/src/: main.cpp
uav/: CMakeLists.txt
uav/resources/armv5te/: proyecto22_minidrones.sh  proyecto22_minidrones.xml
uav/resources/armv7a-neon/: proyecto22_ardrone2.sh  proyecto22_ardrone2.xml  proyecto22_bebop.sh  proyecto22_hdsx8.sh  proyecto22_hdsx8.xml
uav/resources/core2-64/: setup_x4.xml  setup_x4_intelaero.xml  setup_x8.xml  x4.sh  x4_intelaero.sh  x8.sh
uav/src/: Linear.cpp  Linear.h  Nested.cpp  Nested.h  Rk4.cpp  Rk4.h  Sliding.cpp  Sliding.h  main.cpp  proyecto22.cpp  proyecto22.h
